# learn-oauth-oidc

./: .gitignore  README.md  pyproject.toml
src/: jwt_generator.py  jwt_verification.py
src/web/: auth.py  main.py
